<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.PhoneNumberActivity">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@color/secondary_color"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_verify_code_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/montserrat_semibold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_verify_code_message"
            android:textColor="#5E5E5E"
            android:gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_verify_code_message2"
            android:textColor="#5E5E5E"
            android:gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="40dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_verify_country_code"
                    android:textSize="18sp"
                    android:id="@+id/tv_static_code"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_semibold"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_verify_hint_number"
                    android:textColorHint="@color/text_hint_color"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:background="@null"
                    android:maxLength="10"
                    android:fontFamily="@font/montserrat_semibold" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/text_hint_color"
            android:layout_marginTop="10dp"
            android:layout_marginStart="83dp"
            android:layout_marginEnd="85dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/btn_get_otp"
            android:text="@string/btn_get_otp"
            android:textColor="@color/white"
            android:background="@drawable/semi_round_btn_bg"
            android:layout_marginTop="65dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"/>

    </LinearLayout>

</ScrollView>